# paravoca

./: .env.example  .env.image-bridge.example  .env.notion-bridge.example  .gitignore  README.md  docker-compose.image-bridge.yml  docker-compose.notion-bridge.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  data_enrichment.py  geo_resolver.py  preflight.py  run_cancellation.py  state.py  workflow.py
backend/app/api/: responses.py  routes_data.py  routes_data_sources.py  routes_evaluations.py  routes_health.py  routes_llm.py  routes_posters.py  routes_rag.py  routes_runs.py  routes_workflows.py
backend/app/core/: config.py  timezone.py
backend/app/db/: models.py  session.py
backend/app/evals/: __init__.py  llm_judge.py  metrics.py  reporting.py  run_eval.py  runner.py
backend/app/llm/: __init__.py  gemini_gateway.py  key_check.py  usage_log.py
backend/app/observability/: workflow_error_log.py
backend/app/posters/: __init__.py  costs.py  openai_images.py  presets.py  prompt_builder.py  prompt_log.py  usage_log.py
backend/app/rag/: __init__.py  chroma_store.py  embeddings.py  reindex.py  source_documents.py
backend/app/schemas/: enrichment.py  llm.py  posters.py  rag.py  tourism.py  workflow.py
backend/app/tests/: conftest.py  geo_catalog_helpers.py  test_api.py  test_data_enrichment.py  test_evaluations.py  test_geo_resolver.py  test_phase11_5_planner_research.py  test_phase11_evidence_generation.py  test_posters.py  test_rag_embeddings.py  test_tourapi_catalog_sync.py  test_tourism_api.py
backend/app/tools/: __init__.py  kto_capabilities.py  route_signals.py  sync_tourapi_catalogs.py  themes.py  (+3 more)
image-bridge/: Dockerfile  README.md  pyproject.toml
image-bridge/app/: main.py
image-bridge/tests/: test_image_bridge.py
notion-bridge/: Dockerfile  README.md  pyproject.toml
notion-bridge/app/: main.py
notion-bridge/tests/: test_notion_bridge.py
(+157 files in other folders)
