[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "paravoca-backend"
version = "0.1.0"
description = "FastAPI backend for PARAVOCA AX Agent Studio"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "chromadb>=1.5",
  "langgraph>=1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "logs*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
